try to fix missing modules error and move addOpens detection into ant build
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1852072 13f79535-47bb-0310-9956-ffa450edef68